--- a/.github/workflows/weekly-summaries.yml
+++ b/.github/workflows/weekly-summaries.yml
@@ -61,6 +61,9 @@ jobs:
         
         # Generate summaries
         python scripts/generate_summaries.py ./data/contributors.json ./data/contributors.json -f
+
+        # Calculate scores
+        python scripts/compute_scores.py ./data/contributors.json ./data/contributors.json -f
         
         # Run weekly analysis using existing PR data
         python scripts/analyze_contributors3.py \
