feat: use astro

--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "version": "1.0.0",
   "description": "Generate static sites for GitHub contributors",
   "scripts": {
-    "build": "node scripts/build.js",
-    "generate": "node dist/generate_site.js"
+    "dev": "astro dev",
+    "build": "astro build"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recharts": "^2.12.0"
+    "@astrojs/react": "^4.1.0",
+    "@astrojs/tailwind": "^5.1.3",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
+    "astro": "^5.0.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "recharts": "^2.12.0",
+    "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
     "esbuild": "^0.19.12"
