--- a/.github/workflows/weekly-summaries.yml
+++ b/.github/workflows/weekly-summaries.yml
@@ -70,10 +70,9 @@ jobs:
           --before "$WEEK_END" \
           -f
     
-    - name: Build and generate site
+    - name: Build site
       run: |
         npm run build
-        npm run generate
     
     - name: Commit and push if changed
       run: |
