--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
+    "@bonfida/spl-name-service": "^3.0.11",
     "@commander-js/extra-typings": "^12.0.0",
     "@date-fns/utc": "^2.1.0",
     "@radix-ui/react-accordion": "^1.2.2",
@@ -39,6 +40,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.13",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@solana/web3.js": "^1.98.2",
     "@tanstack/react-virtual": "^3.11.2",
     "@types/minimatch": "^5.1.2",
     "axios": "^1.8.4",
