--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
     "@bonfida/spl-name-service": "^3.0.11",
     "@commander-js/extra-typings": "^12.0.0",
     "@date-fns/utc": "^2.1.0",
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.13",
     "@radix-ui/react-tooltip": "^1.1.6",
@@ -68,6 +69,7 @@
     "p-retry": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1",
     "react-markdown": "^9.0.1",
     "recharts": "^2.15.2",
     "remark-frontmatter": "^5.0.0",
@@ -80,7 +82,7 @@
     "unist-util-visit": "^5.0.0",
     "viem": "^2.29.2",
     "yaml": "^2.4.1",
-    "zod": "^3.24.1"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
