--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,9 +65,11 @@ jobs:
           dump_dir: ${{ env.DATA_DIR }}/dump
           db_path: ${{ env.DATA_DIR }}/db.sqlite
 
-      - name: Get yesterday's date and copy stats
-        run: |
-          cp data/elizaos_eliza/stats/day/stats_$(date -d "yesterday" +'%Y-%m-%d').json data/elizaos_eliza/stats/day/stats.json
+      # Copy yesterday's stats to latest stats file (optional)
+      # Uncomment and adapt path if needed for Sendo-labs repo
+      # - name: Get yesterday's date and copy stats
+      #   run: |
+      #     cp data/Sendo-labs_elizaos.github.io/stats/day/stats_$(date -d "yesterday" +'%Y-%m-%d').json data/Sendo-labs_elizaos.github.io/stats/day/stats.json
 
       - name: Generate Directory Listings
         uses: jayanta525/github-pages-directory-listing@v4.0.0
