--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,6 +65,16 @@ jobs:
           dump_dir: ${{ env.DATA_DIR }}/dump
           db_path: ${{ env.DATA_DIR }}/db.sqlite
 
+      # Initialize database if it doesn't exist (first run or after _data branch deletion)
+      - name: Initialize database if needed
+        run: |
+          if [ ! -f "${{ env.DATA_DIR }}/db.sqlite" ]; then
+            echo "Database not found, initializing..."
+            bun run db:migrate
+          else
+            echo "Database exists, skipping initialization"
+          fi
+
       # Copy yesterday's stats to latest stats file (optional)
       # Uncomment and adapt path if needed for Sendo-labs repo
       # - name: Get yesterday's date and copy stats
