--- a/auth-worker/wrangler.toml
+++ b/auth-worker/wrangler.toml
@@ -6,7 +6,7 @@ compatibility_date = "2023-10-30"
 command = "bun run build"
 
 [vars]
-ALLOWED_ORIGIN = "https://elizaos.github.io"
+ALLOWED_ORIGIN = "https://m3-org.github.io"
 # Secrets (to be set via `npx wrangler secret put <NAME>`) in production:
 # GITHUB_CLIENT_ID
 # GITHUB_CLIENT_SECRET 
