--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,30 +68,11 @@ jobs:
       - name: Copy yesterday's stats for all tracked repositories
         run: |
           YESTERDAY=$(date -d "yesterday" +'%Y-%m-%d')
-          echo "Processing stats for date: ${YESTERDAY}"
-
-          # Find all repository directories and copy stats files
-          # Pattern matches owner_repo format, excluding dump/ and summaries/
-          for repo_dir in data/*/; do
-            repo_name=$(basename "$repo_dir")
-
-            # Skip non-repository directories
-            if [[ "$repo_name" == "dump" || "$repo_name" == "summaries" ]]; then
-              continue
-            fi
-
-            stats_file="${repo_dir}stats/day/stats_${YESTERDAY}.json"
-            target_file="${repo_dir}stats/day/stats.json"
-
-            if [ -f "$stats_file" ]; then
-              cp "$stats_file" "$target_file"
-              echo "Copied stats for ${repo_name}"
-            else
-              echo "Warning: No stats file found for ${repo_name} on ${YESTERDAY}"
-            fi
+          shopt -s nullglob
+          for file in data/*/stats/day/stats_${YESTERDAY}.json; do
+            cp "$file" "${file%_*}.json"
+            echo "Copied: $(basename $(dirname $(dirname $(dirname "$file"))))"
           done
-
-          echo "Stats copy complete"
 
       - name: Generate Directory Listings
         uses: jayanta525/github-pages-directory-listing@v4.0.0
