feat: add JSON leaderboard API endpoints and fix branding
- Add static JSON API endpoints for leaderboard (monthly, weekly, lifetime)
- Fix ElizaOS → Sendo branding in summaries and headers
- Include Solana & Ethereum wallet addresses in leaderboard data
- Implement tests for new leaderboard export functionality

- Create `exportLeaderboardAPI.ts` with functions to generate static JSON endpoints
- Add `export-leaderboard` CLI command for manual/CI execution
- Generate 3 endpoints: monthly, weekly, lifetime with user rankings and scores
- Include wallet addresses (Solana & Ethereum) from GitHub profiles
- Use calendar-based periods (Sunday for weekly, 1st of month for monthly)

- Update AI summary context from ElizaOS to Sendo in pipeline config
- Fix HTTP headers in AI service to use Sendo branding
- Preserve attribution to ElizaOS fork in about page

- Add leaderboard export step to deploy workflow
- Endpoints will be available at: /data/api/leaderboard-{period}.json

- Add comprehensive tests for leaderboard export (9 tests, all passing)
- Add `generateMockWalletAddresses` helper for test data
- Test coverage: periods, wallets, limits, bot exclusion, date ranges

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,6 +75,12 @@ jobs:
             echo "Database exists, skipping initialization"
           fi
 
+      # Export leaderboard API endpoints (monthly, weekly, lifetime)
+      - name: Export Leaderboard API Endpoints
+        run: bun run pipeline export-leaderboard --output-dir=${{ env.DATA_DIR }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Copy yesterday's stats for all tracked repositories
         run: |
           YESTERDAY=$(date -d "yesterday" +'%Y-%m-%d')
