--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,6 +65,22 @@ jobs:
           dump_dir: ${{ env.DATA_DIR }}/dump
           db_path: ${{ env.DATA_DIR }}/db.sqlite
 
+      # Initialize database if it doesn't exist (first run or after _data branch deletion)
+      - name: Initialize database if needed
+        run: |
+          if [ ! -f "${{ env.DATA_DIR }}/db.sqlite" ]; then
+            echo "Database not found, initializing..."
+            bun run db:migrate
+          else
+            echo "Database exists, skipping initialization"
+          fi
+
+      # Export leaderboard API endpoints (monthly, weekly, lifetime)
+      - name: Export Leaderboard API Endpoints
+        run: bun run pipeline export-leaderboard --output-dir=${{ env.DATA_DIR }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Copy yesterday's stats for all tracked repositories
         run: |
           YESTERDAY=$(date -d "yesterday" +'%Y-%m-%d')
