feat: add JSON leaderboard API endpoints
Add static JSON API endpoints for leaderboard data that can be consumed
by external applications, mobile apps, or third-party integrations.

Features:
- Generate leaderboard JSON files for monthly, weekly, and lifetime periods
- Include user rankings, scores (total, PR, issue, review, comment)
- Include wallet addresses (Solana & Ethereum) from GitHub profiles
- Calendar-based periods (Sunday start for weekly, 1st of month for monthly)
- CLI command: `bun run pipeline export-leaderboard`
- Integrated into CI/CD workflow for automatic updates
- Comprehensive test suite (9 tests)

API endpoints will be available at:
- /data/api/leaderboard-monthly.json
- /data/api/leaderboard-weekly.json
- /data/api/leaderboard-lifetime.json

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,6 +65,12 @@ jobs:
           dump_dir: ${{ env.DATA_DIR }}/dump
           db_path: ${{ env.DATA_DIR }}/db.sqlite
 
+      # Export leaderboard API endpoints (monthly, weekly, lifetime)
+      - name: Export Leaderboard API Endpoints
+        run: bun run pipeline export-leaderboard --output-dir=${{ env.DATA_DIR }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Copy yesterday's stats for all tracked repositories
         run: |
           YESTERDAY=$(date -d "yesterday" +'%Y-%m-%d')
