Revert "fix: env validation"

--- a/.github/actions/pipeline-data/action.yml
+++ b/.github/actions/pipeline-data/action.yml
@@ -43,13 +43,9 @@ runs:
           git fetch origin ${{ inputs.branch_name }}
           git worktree add .pipeline-data-worktree origin/${{ inputs.branch_name }}
           
-          # Copy all data files from worktree to main workspace if data directory exists
-          if [ -d .pipeline-data-worktree/data ]; then
-            echo "Copying all data files from worktree to workspace..."
-            rsync -av .pipeline-data-worktree/data/ ${{ inputs.data_dir }}/
-          else
-            echo "No data directory found in pipeline-data branch, starting fresh..."
-          fi
+          # Copy all data files from worktree to main workspace
+          echo "Copying all data files from worktree to workspace..."
+          rsync -av .pipeline-data-worktree/data/ ${{ inputs.data_dir }}/
         else
           echo "Creating new pipeline-data branch..."
           
