--- a/.github/workflows/run-pipelines.yml
+++ b/.github/workflows/run-pipelines.yml
@@ -87,23 +87,13 @@ jobs:
           branch_name: ${{ env.PIPELINE_DATA_BRANCH }}
           data_dir: ${{ env.DATA_DIR }}
 
-      # Restore database from pipeline-data branch (or create new if doesn't exist)
+      # Restore database from pipeline-data branch
       - name: Restore database
         uses: ./.github/actions/restore-db
         with:
           operation: restore
           dump_dir: ${{ env.DATA_DIR }}/dump
           db_path: ${{ env.DATA_DIR }}/db.sqlite
-
-      # Initialize database if it doesn't exist (first run)
-      - name: Initialize database if needed
-        run: |
-          if [ ! -f "${{ env.DATA_DIR }}/db.sqlite" ]; then
-            echo "Database not found, initializing..."
-            bun run db:migrate
-          else
-            echo "Database exists, skipping initialization"
-          fi
 
       - name: Run ingest pipeline
         run: bun run pipeline ingest${{ env.force_ingest_arg }}${{ env.start_date_arg }}${{ env.end_date_arg }}
