feat: Add X (Twitter) OAuth integration

--- a/auth-worker/wrangler.toml
+++ b/auth-worker/wrangler.toml
@@ -5,11 +5,20 @@ compatibility_date = "2023-10-30"
 [build]
 command = "bun run build"
 
+# KV Namespaces
+[[kv_namespaces]]
+binding = "LINKING_KV"
+id = "2721c139efea4460899926f5f14e9057"
+preview_id = "d25fd993aca94d2d99c8897b581e75fe"
+
 [vars]
 ALLOWED_ORIGIN = "https://sendo-labs.github.io"
-# Secrets (to be set via `npx wrangler secret put <NAME>`) in production:
+# Secrets (to be set via `bunx wrangler secret put <NAME>`) in production:
 # GITHUB_CLIENT_ID
 # GITHUB_CLIENT_SECRET
+# X_CLIENT_ID
+# X_CLIENT_SECRET
+# LINKING_SECRET
 
 [env.dev.vars]
 ALLOWED_ORIGIN = "http://localhost:3000"
