--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
+    "@cloudflare/workers-types": "^4.20251014.0",
     "@commander-js/extra-typings": "^12.0.0",
     "@date-fns/utc": "^2.1.0",
     "@radix-ui/react-accordion": "^1.2.2",
