feat: Allow manual workflow dispatch on any branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,11 @@ on:
       - ".github/workflows/deploy.yml"
       - "package.json"
   workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to deploy (leave empty for current branch)'
+        required: false
+        type: string
   workflow_run:
     workflows: ["Run Pipelines"]
     branches: [main]
@@ -36,8 +41,10 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
-      - name: Checkout main branch
+      - name: Checkout branch
         uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.branch || github.ref }}
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
