feat: add import-summaries command to backfill missing monthly summaries

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:studio": "bunx drizzle-kit studio",
     "db:migrate": "bun run drizzle/migrate.ts",
     "pipeline": "bun run cli/analyze-pipeline.ts",
+    "pipeline:import-summaries": "bun run cli/analyze-pipeline.ts import-summaries",
     "prepare": "husky install",
     "tasks:list": "bunx task-master list",
     "data:sync": "bun run cli/data-sync.ts"
