feat: add import-summaries command to backfill missing summaries

--- a/.github/workflows/generate-summaries.yml
+++ b/.github/workflows/generate-summaries.yml
@@ -116,7 +116,10 @@ jobs:
 
       # Import any markdown summaries that exist but are missing from database
       - name: Import missing summaries from markdown files
-        run: bun run pipeline import-summaries --from-github --interval month
+        run: |
+          bun run pipeline import-summaries --from-github --interval month
+          bun run pipeline import-summaries --from-github --interval week
+          bun run pipeline import-summaries --from-github --interval day
 
       # Determine which summaries to run based on day of week or manual inputs
       - name: Check for summary generation
