fix: add missing PIPELINE_CONFIG_FILE env var to generate-summaries workflow

--- a/.github/workflows/generate-summaries.yml
+++ b/.github/workflows/generate-summaries.yml
@@ -49,6 +49,7 @@ on:
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
+  PIPELINE_CONFIG_FILE: ${{ secrets.PIPELINE_CONFIG_FILE || 'config/example.json' }}
   PIPELINE_DATA_BRANCH: "_data" # Define branch name as environment variable
   DATA_DIR: "data"
 
