fix: use correct summary types (repository/overall instead of project)

--- a/.github/workflows/generate-summaries.yml
+++ b/.github/workflows/generate-summaries.yml
@@ -144,15 +144,25 @@ jobs:
           echo "run_project=$RUN_PROJECT" >> $GITHUB_OUTPUT
           echo "run_contributor=$RUN_CONTRIBUTOR" >> $GITHUB_OUTPUT
 
-      - name: Generate project summaries
+      - name: Generate repository summaries
         if: ${{ steps.summary-check.outputs.run_project == 'true' }}
         run: |
-          bun run pipeline summarize -t project${{ env.start_date_arg }}${{ env.end_date_arg }}${{ env.force_summaries_arg }}${{ env.interval_args }}
+          bun run pipeline summarize -t repository${{ env.start_date_arg }}${{ env.end_date_arg }}${{ env.force_summaries_arg }}${{ env.interval_args }}
 
-      - name: Force regenerate recent project summaries
+      - name: Generate overall summaries
+        if: ${{ steps.summary-check.outputs.run_project == 'true' }}
+        run: |
+          bun run pipeline summarize -t overall${{ env.start_date_arg }}${{ env.end_date_arg }}${{ env.force_summaries_arg }}${{ env.interval_args }}
+
+      - name: Force regenerate recent repository summaries
         if: ${{ github.event_name != 'workflow_dispatch' && steps.summary-check.outputs.run_project == 'true' }}
         run: |
-          bun run pipeline summarize -t project -f -d 1
+          bun run pipeline summarize -t repository -f -d 1
+
+      - name: Force regenerate recent overall summaries
+        if: ${{ github.event_name != 'workflow_dispatch' && steps.summary-check.outputs.run_project == 'true' }}
+        run: |
+          bun run pipeline summarize -t overall -f -d 1
 
       - name: Generate contributor summaries
         if: ${{ steps.summary-check.outputs.run_contributor == 'true' }}
