--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "build:local": "next build && cp -r data out/ && cp -r out/data/api out/api",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint src cli",
     "typecheck": "tsc --noEmit",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
