feat: add MCP server for GitHub Analytics API
Tools: get_leaderboard, get_profile, get_summary, search

Example: npx mcp-github-analytics
Config: MCP_API_BASE_URL=https://elizaos.github.io

Co-Authored-By: xR0am <xR0am@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,11 @@ backup/
 docs/
 scripts/
 
+# MCP Server package
+mcp-github-analytics/node_modules/
+mcp-github-analytics/dist/
+mcp-github-analytics/*.tgz
+
 # IDE and tool configs (use your own)
 .cursor/
 .cursorignore
