--- a/mcp-github-analytics/package.json
+++ b/mcp-github-analytics/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mcp-github-analytics",
   "version": "1.0.0",
-  "description": "MCP server for GitHub Analytics platforms - provides contributor rankings, profiles, and AI summaries via static JSON API",
+  "description": "MCP server for GitHub Analytics - query contributor data, PRs, issues, and AI summaries",
   "type": "module",
   "main": "dist/index.js",
   "bin": {
@@ -11,26 +11,25 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "start": "node dist/index.js",
-    "prepublishOnly": "npm run build",
-    "lint": "tsc --noEmit"
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "mcp",
     "model-context-protocol",
     "github",
     "analytics",
-    "contributors",
-    "leaderboard"
+    "contributors"
   ],
-  "author": "",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.0.0",
-    "zod": "^3.23.0"
+    "@modelcontextprotocol/sdk": "^1.25.3",
+    "better-sqlite3": "^12.6.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@types/node": "^22.0.0",
-    "typescript": "^5.6.0"
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/node": "^25.0.10",
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -38,10 +37,5 @@
   "files": [
     "dist",
     "README.md"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/elizaOS/elizaos.github.io.git",
-    "directory": "mcp-github-analytics"
-  }
+  ]
 }
